# stl_fork

./: CMakeLists.txt
common/: CMakeLists.txt
common/ctest/: CMakeLists.txt
common/ctest/inc/: ctest.h
common/ctest/src/: main.c
common/debug_print/: CMakeLists.txt
common/debug_print/inc/: debug_print.h
common/debug_print/src/: debug_print.c  main.c
data_structures/: CMakeLists.txt
data_structures/doubly_linked_list/: CMakeLists.txt
data_structures/doubly_linked_list/inc/: doubly_linked_list.h
data_structures/doubly_linked_list/src/: doubly_linked_list.c
data_structures/doubly_linked_list/tests/: CMakeLists.txt  doubly_linked_list_tests.c
data_structures/heap/: CMakeLists.txt
data_structures/heap/src/: heap.c  main.c
data_structures/stack/: CMakeLists.txt
data_structures/stack/inc/: stack.h
data_structures/stack/src/: main.c  stack.c
data_structures/stack/tests/: CMakeLists.txt  stack_tests.c
data_structures/vector/: CMakeLists.txt
data_structures/vector/src/: vector.c
data_structures/vector/tests/: CMakeLists.txt
doubly_linked_list/: CMakeLists.txt
doubly_linked_list/inc/: doubly_linked_list.h
doubly_linked_list/src/: doubly_linked_list.c  main.c
doubly_linked_list/tests/: CMakeLists.txt  doubly_linked_list_tests.c
heap/: CMakeLists.txt
heap/inc/: heap.h
heap/tests/: CMakeLists.txt  heap_tests.c
sorting_algorithms/: CMakeLists.txt
sorting_algorithms/quick_sort/: CMakeLists.txt
sorting_algorithms/quick_sort/inc/: quick_sort.h
sorting_algorithms/quick_sort/tests/: CMakeLists.txt  quick_sort_tests.c
stack/: CMakeLists.txt
stack/inc/: stack.h
stack/src/: main.c  stack.c
stack/tests/: stack_tests.c
vector/: CMakeLists.txt
vector/inc/: vector.h
vector/src/: vector.c
vector/tests/: vector_tests.c
